more products pages added

--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhagirath Industries | Chemicals</title>
+    <title>Bhagirath Industries | Agro Commodities</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <!-- <link rel="stylesheet" href="assets/css/contact-us.css"> -->
     <link rel="stylesheet" href="assets/css/products.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font Awesome -->
+    <!-- FONT AWESOME -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- Bootstrap -->
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -58,12 +58,11 @@
                         <ul class="dropdown-menu text-dark">
                             <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible &
                                     Non-Edible Oils</a></li>
-                            <li><a class="dropdown-item text-dark active" aria-current="page"
-                                    href="./chemicals.html">Chemicals</a></li>
+                            <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
                             <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum &
                                     Oil Products</a></li>
-                            <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a>
-                            </li>
+                            <li><a class="dropdown-item text-dark active" aria-current="page"
+                                    href="./agro-commodities.html">Agro Commodities</a></li>
                             <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
                         </ul>
                     </li>
@@ -98,35 +97,32 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="assets/images/edible-oil-page/hero-section-img/Rectangle 29 (5).webp" class="d-block w-100"
-                    alt="...">
+                <img src="./assets/images/agro-commodities-copy/hero-img/agro-commodities-hero-img-1.png"
+                    class="d-block w-100" alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
+                        blanditiis, incidunt maiores rem ducimus unde. Dicta debitis corrupti accusamus.</p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/Rectangle 75.webp" class="d-block w-100"
-                    alt="...">
+                <img src="./assets/images/agro-commodities-copy/hero-img/agro-commodities-hero-img-2.png"
+                    class="d-block w-100" alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
                 </div>
             </div>
-            <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/Rectangle 76.webp" class="d-block w-100"
-                    alt="...">
-                <div class="carousel-caption text-center">
-                    <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We
-                        ship our
-                        products all over the world, and our quality meets all the necessary requirements.</p>
-                </div>
-            </div>
+            <!-- <div class="carousel-item carousel-item-custom-height">
+        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 77.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption text-center">
+          <h1>PETROLEUM AND BIO FUEL</h1>
+          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
+            further! We ship our
+            products all over the world, and our quality meets all the necessary requirements.</p>
+        </div>
+      </div> -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
@@ -146,41 +142,38 @@
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
             <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet
-                your
-                global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
-                pulses,
-                our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality
-                yellow maize for various applications, ensuring a reliable supply chain for your raw material
-                requirements.
+                your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
+                and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
+                high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
+                material requirements.
             </p>
         </div>
         <div class="row">
             <!-- 1st Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
-                    alt="GROUNDNUT OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-1.png"
+                    class="card-img-top" alt="Rice">
                 <div class="card-body">
-                    <h3>GROUNDNUT OIL</h3>
-                    <p>Known for its rich, nutty flavour, Groundnut oil is a versatile choice in various cuisines.</p>
+                    <h3>RICE</h3>
+                    <p>A Versatile staple food or billions globally, cherished for its nutritional value and culinary
+                        diversity.</p>
                     <ul>
-                        <li>Rich, nutty flavour enhances various cuisines.</li>
-                        <li>High smoke point makes it suitable for frying.</li>
-                        <li>Contains heart-healthy monounsaturated fats.</li>
-                        <li>Source of vitamin E, an antioxidant.</li>
-                        <li>Commonly used in Asian and African cooking.</li>
+                        <li>Rice is a staple food for billions, providing vital carbohydrates.</li>
+                        <li>Varieties include long-grain, short-grain, and basmati, which offer distinct qualities.</li>
+                        <li>Leading rice producers: China, India, Indonesia.</li>
+                        <li>A versatile ingredient from sushi to risotto.</li>
+                        <li>Vital global food security and agriculture.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 2nd Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top"
-                    alt="SOYABEANS">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-2.png"
+                    class="card-img-top" alt="Soyabeans">
                 <div class="card-body">
                     <h3>SOYABEANS</h3>
                     <p>Versatile legumes rich in protein and nutrients, used in various industries, including food,
-                        animal feed,
-                        and oil production.</p>
+                        animal feed, and oil production.</p>
                     <ul>
                         <li>Soybeans: major plant-based protein and oil source.</li>
                         <li>Used in tofu, soy milk, and soybean oil.</li>
@@ -189,74 +182,77 @@
                         <li>Gaining popularity for health benefits and sustainability.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 3rd Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top"
-                    alt="CASTOR OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-3.png"
+                    class="card-img-top" alt="Wheat">
                 <div class="card-body">
-                    <h3>CASTOR OIL</h3>
-                    <p>Valued for culinary and medicinal purposes, Castor oil offers unique properties.</p>
+                    <h3>WHEAT</h3>
+                    <p>A widely cultivated grain, a primary source of flour for baking worldwide, adaptable to diverse
+                        climates.</p>
                     <ul>
-                        <li>Derived from castor beans and used for medicinal purposes.</li>
-                        <li>Known for its laxative properties.</li>
-                        <li>Also used in cosmetics and industrial applications.</li>
-                        <li>Contains ricinoleic acid with potential health benefits.</li>
-                        <li>Should be used cautiously due to its potency.</li>
+                        <li>WHEAT, a staple grain, makes bread, pasta, and cereals.</li>
+                        <li>Widely cultivated worldwide.</li>
+                        <li>Major producers : Russia, China, U.S.</li>
+                        <li>Varies in gluten, influencing usage.</li>
+                        <li>Crucial for global food security and diet diversity</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 4th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
-                    alt="SUNFLOWER OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-4.png"
+                    class="card-img-top" alt="Sugar">
                 <div class="card-body">
-                    <h3>SUNFLOWER OIL</h3>
-                    <p>Light in taste and versatile in cooking, Sunflower oil is a popular household choice.</p>
+                    <h3>SUGAR</h3>
+                    <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
+                        in food processing and confectionery.</p>
                     <ul>
-                        <li>Neutral taste and high smoke point make it versatile.</li>
-                        <li>Low in saturated fats and rich in vitamin E.</li>
-                        <li>Popular for frying, sautéing, and salad dressings.</li>
-                        <li>Supports heart health and may reduce inflammation.</li>
-                        <li>Commonly used in Eastern European and Mediterranean cuisines.</li>
+                        <li>Sugar from sugarcane and sugar beets sweetens products.</li>
+                        <li>Key in confectionery and beverages.</li>
+                        <li>Top producers: Brazil, India, China</li>
+                        <li>Forms: granulated, brown, powdered.</li>
+                        <li>Concerns about excessive sugar drive interest in alternatives.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 5th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
-                    alt="MUSTARD OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-5.png"
+                    class="card-img-top" alt="Dal and pulses">
                 <div class="card-body">
-                    <h3>MUSTARD OIL</h3>
-                    <p>Loved for its pungent flavour, Mustard oil is a kitchen essential in many regions.</p>
+                    <h3>DAL AND PULSES</h3>
+                    <p>Essential plant-based protein sources in many cuisines, including lentils, chickpeas, and beans.
+                    </p>
                     <ul>
-                        <li>Pungent flavour adds unique taste to dishes.</li>
-                        <li>Used extensively in Indian and Southeast Asian cooking.</li>
-                        <li>High smoking point makes it suitable for deep frying.</li>
-                        <li>Contains omega-3 and omega-6 fatty acids.</li>
-                        <li>Can be milder when heated for a shorter time.</li>
+                        <li>Dal and pulses provide plant-based protein.</li>
+                        <li>Lentils, chickpeas, and beans offer diverse flavours and textures.</li>
+                        <li>Used in Indian, Mediterranean, and Middle Eastern cuisines.</li>
+                        <li>Vital for vegetarian and vegan diets.</li>
+                        <li>Enhance soil health through nitrogen fixation.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 6th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top"
-                    alt="PALM OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/agro-commodities-copy/card-img/agro-commodities-card-img-6.png"
+                    class="card-img-top" alt="Yellow maize">
                 <div class="card-body">
-                    <h3>PALM OIL</h3>
-                    <p>A versatile ingredient, Palm oil adds stability and texture to various food products.</p>
+                    <h3>YELLOW MAIZE</h3>
+                    <p>Derived from sugar cane or beets, sugar sweetens countless food and beverages, a key ingredient
+                        in food processing and confectionery.</p>
                     <ul>
-                        <li>Versatile and widely used in the food industry.</li>
-                        <li>Used in various processed products like margarine and snacks.</li>
-                        <li>Controversial due to environmental concerns in palm oil production.</li>
-                        <li>High in saturated fats but also contains beneficial components.</li>
-                        <li>Rich in antioxidants like vitamin E and carotenoids.</li>
+                        <li>Sugar from sugarcane and sugar beets sweetens products.</li>
+                        <li>Key in confectionery and beverages.</li>
+                        <li>Top producers: Brazil, India, China.</li>
+                        <li>Forms: granulated, brown, powdered.</li>
+                        <li>Concerns about excessive sugar drive interest in alternatives.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
-
 
     <!-- FOOTER -->
 
@@ -265,8 +261,6 @@
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
-                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
-                        class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo"
                         class="img-fluid-footer-logo">
                     <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
@@ -300,13 +294,6 @@
                         <br>
                         <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
                     </div>
-                    <!-- <div class="frame-35-icon pt-3">
-                        <img src="assets/images/footer-section/Vector (6).png" alt="icon">
-                        <img src="assets/images/footer-section/Vector (7).png" alt="icon">
-                        <img src="assets/images/footer-section/Group (3).png" alt="icon">
-                        <img src="assets/images/footer-section/Vector (9).png" alt="icon">
-                        <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
-                    </div> -->
                     <div class="footer-icon-container">
                         <a class="social-icon" href="https://www.facebook.com/" target="_blank"
                             rel="noopener noreferrer">
