--- a/contact-us.html
+++ b/contact-us.html
@@ -59,6 +59,8 @@
               <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
               <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum & Oil
                   Products</a></li>
+              <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a></li>
+              <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
             </ul>
           </li>
 
