--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
                             Products
                         </a>
                         <ul class="dropdown-menu text-dark">
-                            <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible & Non-Edible Oils</a></li>
+                            <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible &
+                                    Non-Edible Oils</a></li>
                             <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
-                            <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum & Oil Products</a></li>
+                            <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum &
+                                    Oil Products</a></li>
+                            <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a>
+                            </li>
+                            <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
                         </ul>
                     </li>
 
@@ -619,8 +624,10 @@
                     <h3>Useful Links</h3>
                     <div class="arrow">
                         <a href="./index.html">Home<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
-                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
+                        <a href="./about.html">About Us<img src="assets/images/footer-section/Arrow 1.png"
+                                alt=""></a><br>
+                        <a href="./our-services.html">Our Services<img src="assets/images/footer-section/Arrow 1.png"
+                                alt=""></a><br>
                         <a href="#">Terms of Services <img src="assets/images/footer-section/Arrow 1.png"
                                 alt=""></a><br>
                         <a href="#">Privacy Policy <img src="assets/images/footer-section/Arrow 1.png" alt=""></a>
@@ -648,9 +655,8 @@
                         <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
                     </div> -->
                     <div class="footer-icon-container">
-                        <a class="social-icon"
-                            href="https://www.facebook.com/"
-                            target="_blank" rel="noopener noreferrer">
+                        <a class="social-icon" href="https://www.facebook.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <i class="bi bi-facebook"></i>
                         </a>
                         <a class="social-icon" href="https://www.youtube.com/" target="_blank"
@@ -661,8 +667,8 @@
                             rel="noopener noreferrer">
                             <i class="bi bi-instagram"></i>
                         </a>
-                        <a class="social-icon" href="https://www.linkedin.com/"
-                            target="_blank" rel="noopener noreferrer">
+                        <a class="social-icon" href="https://www.linkedin.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <i class="bi bi-linkedin"></i>
                         </a>
                     </div>
