--- a/biofuels.html
+++ b/biofuels.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhagirath Industries | Chemicals</title>
+    <title>Bhagirath Industries | Biofuels</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <!-- <link rel="stylesheet" href="assets/css/contact-us.css"> -->
     <link rel="stylesheet" href="assets/css/products.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font Awesome -->
+    <!-- FONT AWESOME -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <!-- Bootstrap -->
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -58,13 +58,13 @@
                         <ul class="dropdown-menu text-dark">
                             <li><a class="dropdown-item text-dark" href="./edible-and-non-edible-oils.html">Edible &
                                     Non-Edible Oils</a></li>
-                            <li><a class="dropdown-item text-dark active" aria-current="page"
-                                    href="./chemicals.html">Chemicals</a></li>
+                            <li><a class="dropdown-item text-dark" href="./chemicals.html">Chemicals</a></li>
                             <li><a class="dropdown-item text-dark" href="./petroleum-and-oil-products.html">Petroleum &
                                     Oil Products</a></li>
                             <li><a class="dropdown-item text-dark" href="./agro-commodities.html">Agro Commodities</a>
                             </li>
-                            <li><a class="dropdown-item text-dark" href="./biofuels.html">Biofuels</a></li>
+                            <li><a class="dropdown-item text-dark active" aria-current="page"
+                                    href="./biofuels.html">Biofuels</a></li>
                         </ul>
                     </li>
 
@@ -98,35 +98,32 @@
     </div> -->
         <div class="carousel-inner">
             <div class="carousel-item carousel-item-custom-height active">
-                <img src="assets/images/edible-oil-page/hero-section-img/Rectangle 29 (5).webp" class="d-block w-100"
-                    alt="...">
+                <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-1.png" class="d-block w-100"
+                    alt="Hero Image 1">
                 <div class="carousel-caption text-center">
-                    <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta obcaecati
+                        blanditiis, incidunt maiores rem ducimus unde. Dicta debitis corrupti accusamus.</p>
                 </div>
             </div>
             <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/Rectangle 75.webp" class="d-block w-100"
-                    alt="...">
+                <img src="./assets/images/biofuels/hero-img/biofuels-hero-img-2.png" class="d-block w-100"
+                    alt="Hero Image 2">
                 <div class="carousel-caption text-center">
-                    <h1>COMMODITIES AND FOOD PRODUCTS</h1>
-                    <p>When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
-                        worldwide, and you
-                        can trust that the quality is always up to standard.</p>
+                    <h1>Lorem ipsum dolor sit amet consectetur. </h1>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+                        excepturi commodi? Rem accusantium vero quo deleniti? Harum quos beatae ut.</p>
                 </div>
             </div>
-            <div class="carousel-item carousel-item-custom-height">
-                <img src="assets/images/edible-oil-page/hero-section-img/Rectangle 76.webp" class="d-block w-100"
-                    alt="...">
-                <div class="carousel-caption text-center">
-                    <h1>PETROLEUM AND BIO FUEL</h1>
-                    <p>Are you looking for top-quality agriculture commodities and food products? Look no further! We
-                        ship our
-                        products all over the world, and our quality meets all the necessary requirements.</p>
-                </div>
-            </div>
+            <!-- <div class="carousel-item carousel-item-custom-height">
+        <img src="assets/images/petroleum-oil-page/hero-img/Rectangle 77.webp" class="d-block w-100" alt="...">
+        <div class="carousel-caption text-center">
+          <h1>PETROLEUM AND BIO FUEL</h1>
+          <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
+            further! We ship our
+            products all over the world, and our quality meets all the necessary requirements.</p>
+        </div>
+      </div> -->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
@@ -146,117 +143,93 @@
         <div class="product-top-content text-center pb-3">
             <h2>PRODUCTS WE SERVE</h2>
             <p class="text-center">At BVM, we take pride in serving a diverse range of essential raw materials to meet
-                your
-                global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal and
-                pulses,
-                our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
-                high-quality
-                yellow maize for various applications, ensuring a reliable supply chain for your raw material
-                requirements.
+                your global business needs. From premium-quality rice and soybeans to sugar, wheat, and nutritious dal
+                and pulses, our offerings are designed to fuel industries worldwide. Additionally, we excel in providing
+                high-quality yellow maize for various applications, ensuring a reliable supply chain for your raw
+                material requirements.
             </p>
         </div>
         <div class="row">
             <!-- 1st Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/GROUNDNUT OIL.webp" class="card-img-top"
-                    alt="GROUNDNUT OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-1.png" class="card-img-top"
+                    alt="BIO DIESEL">
                 <div class="card-body">
-                    <h3>GROUNDNUT OIL</h3>
-                    <p>Known for its rich, nutty flavour, Groundnut oil is a versatile choice in various cuisines.</p>
+                    <h3>BIO DIESEL</h3>
+                    <p>BioDiesel is a renewable diesel fuel made from organic materials.</p>
                     <ul>
-                        <li>Rich, nutty flavour enhances various cuisines.</li>
-                        <li>High smoke point makes it suitable for frying.</li>
-                        <li>Contains heart-healthy monounsaturated fats.</li>
-                        <li>Source of vitamin E, an antioxidant.</li>
-                        <li>Commonly used in Asian and African cooking.</li>
+                        <li>Reduces greenhouse gas emissions.</li>
+                        <li>Can be used in existing diesel engines.</li>
+                        <li>Promotes energy independence.</li>
+                        <li>Lower sulphur content compared to traditional diesel.</li>
+                        <li>Supports agriculture by using crops like soybeans and canola.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 2nd Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/SOYABEANS.webp" class="card-img-top"
-                    alt="SOYABEANS">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.png" class="card-img-top" alt="ETHANOL">
                 <div class="card-body">
-                    <h3>SOYABEANS</h3>
-                    <p>Versatile legumes rich in protein and nutrients, used in various industries, including food,
-                        animal feed,
-                        and oil production.</p>
+                    <h3>ETHANOL</h3>
+                    <p>Ethanol is an alcohol-based biofuel primarily derived from corn or sugarcane.</p>
                     <ul>
-                        <li>Soybeans: major plant-based protein and oil source.</li>
-                        <li>Used in tofu, soy milk, and soybean oil.</li>
-                        <li>Essential for animal feed and biodiesel.</li>
-                        <li>Top producers: U.S., Brazil, Argentina.</li>
-                        <li>Gaining popularity for health benefits and sustainability.</li>
+                        <li>Reduces carbon dioxide emissions.</li>
+                        <li>Blended with gasoline to enhance octane levels.</li>
+                        <li>Supports the agricultural industry.</li>
+                        <li>Can be used in flexible-fuel vehicles.</li>
+                        <li>A renewable and domestically-produced fuel source.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 3rd Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/CASTOR OIL.webp" class="card-img-top"
-                    alt="CASTOR OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.png" class="card-img-top" alt="BIO LNG">
                 <div class="card-body">
-                    <h3>CASTOR OIL</h3>
-                    <p>Valued for culinary and medicinal purposes, Castor oil offers unique properties.</p>
+                    <h3>BIO LNG</h3>
+                    <p>Bio LNG is a renewable form of liquefied natural gas made from organic matter.</p>
                     <ul>
-                        <li>Derived from castor beans and used for medicinal purposes.</li>
-                        <li>Known for its laxative properties.</li>
-                        <li>Also used in cosmetics and industrial applications.</li>
-                        <li>Contains ricinoleic acid with potential health benefits.</li>
-                        <li>Should be used cautiously due to its potency.</li>
+                        <li>Lowers greenhouse gas emissions.</li>
+                        <li>Can be used for transportation and industrial purposes.</li>
+                        <li>Increases energy security.</li>
+                        <li>Supports waste-to-energy initiatives.</li>
+                        <li>Part of a sustainable circular economy.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 4th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/SUNFLOWER OIL.webp" class="card-img-top"
-                    alt="SUNFLOWER OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-4.png" class="card-img-top"
+                    alt="FATTY ACIDS AND STERNE">
                 <div class="card-body">
-                    <h3>SUNFLOWER OIL</h3>
-                    <p>Light in taste and versatile in cooking, Sunflower oil is a popular household choice.</p>
+                    <h3>FATTY ACIDS AND STERNE</h3>
+                    <p>Fatty Acids & Sterne are renewable bio-based materials used in various industries.</p>
                     <ul>
-                        <li>Neutral taste and high smoke point make it versatile.</li>
-                        <li>Low in saturated fats and rich in vitamin E.</li>
-                        <li>Popular for frying, sautéing, and salad dressings.</li>
-                        <li>Supports heart health and may reduce inflammation.</li>
-                        <li>Commonly used in Eastern European and Mediterranean cuisines.</li>
+                        <li>Versatile components for biofuels, plastics, and chemicals.</li>
+                        <li>Reduce dependence on fossil fuels.</li>
+                        <li>Sustainable sourcing from plant and animal fats.</li>
+                        <li>Enable the production of eco-friendly products.</li>
+                        <li>Support the transition to a bio-based economy.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
             <!-- 5th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/MUSTARD OIL.webp" class="card-img-top"
-                    alt="MUSTARD OIL">
+            <div class="card-product col-md-6 p-4">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-5.png" class="card-img-top"
+                    alt="PALM OIL AND USED COOKING OIL">
                 <div class="card-body">
-                    <h3>MUSTARD OIL</h3>
-                    <p>Loved for its pungent flavour, Mustard oil is a kitchen essential in many regions.</p>
+                    <h3>PALM OIL AND USED COOKING OIL</h3>
+                    <p>Palm Oil and Used Cooking Oil are sustainable sources for biofuel production.</p>
                     <ul>
-                        <li>Pungent flavour adds unique taste to dishes.</li>
-                        <li>Used extensively in Indian and Southeast Asian cooking.</li>
-                        <li>High smoking point makes it suitable for deep frying.</li>
-                        <li>Contains omega-3 and omega-6 fatty acids.</li>
-                        <li>Can be milder when heated for a shorter time.</li>
+                        <li>Palm oil-based biodiesel is an alternative to fossil diesel.</li>
+                        <li>Reduces waste and environmental impact.</li>
+                        <li>Supports responsible palm oil sourcing practices.</li>
+                        <li>Used cooking oil recycling reduces landfill waste.</li>
+                        <li>Contributes to cleaner energy and waste management.</li>
                     </ul>
                 </div>
-            </div> -->
-            <!-- 6th Card -->
-            <!-- <div class="card-product col-md-6 p-4">
-                <img src="assets/images/edible-oil-page/edible-card-img/PALM OIL.webp" class="card-img-top"
-                    alt="PALM OIL">
-                <div class="card-body">
-                    <h3>PALM OIL</h3>
-                    <p>A versatile ingredient, Palm oil adds stability and texture to various food products.</p>
-                    <ul>
-                        <li>Versatile and widely used in the food industry.</li>
-                        <li>Used in various processed products like margarine and snacks.</li>
-                        <li>Controversial due to environmental concerns in palm oil production.</li>
-                        <li>High in saturated fats but also contains beneficial components.</li>
-                        <li>Rich in antioxidants like vitamin E and carotenoids.</li>
-                    </ul>
-                </div>
-            </div> -->
+            </div>
         </div>
     </div>
-
 
     <!-- FOOTER -->
 
@@ -265,8 +238,6 @@
             <div class="row equal-spacing">
                 <!-- frame 35 -->
                 <div class="col-md-3 mb-4">
-                    <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
-                        class="img-fluid-footer-logo"> -->
                     <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo"
                         class="img-fluid-footer-logo">
                     <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
@@ -300,13 +271,6 @@
                         <br>
                         <img src="assets/images/footer-section/Vector (11).png" alt=""> +852 39195837
                     </div>
-                    <!-- <div class="frame-35-icon pt-3">
-                        <img src="assets/images/footer-section/Vector (6).png" alt="icon">
-                        <img src="assets/images/footer-section/Vector (7).png" alt="icon">
-                        <img src="assets/images/footer-section/Group (3).png" alt="icon">
-                        <img src="assets/images/footer-section/Vector (9).png" alt="icon">
-                        <img src="assets/images/footer-section/pajamas_twitter.png" alt="icon">
-                    </div> -->
                     <div class="footer-icon-container">
                         <a class="social-icon" href="https://www.facebook.com/" target="_blank"
                             rel="noopener noreferrer">
